--- a/web-sayfam/src/components/Header.css
+++ b/web-sayfam/src/components/Header.css
@@ -353,6 +353,7 @@
         justify-content: flex-start;
         margin-left: 2%;
         padding-left: 0;
+        width: 100%;
     }
 
     .container1a {
